dont store takeout zips
